added http communication with back end

--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -9,7 +9,10 @@
             </div>
             <div>
                 <label>Activity:</label> {{person.activity}}
-            </div>            
+            </div>
+            <div>
+                <label>Comments:</label> {{person.comments}}
+            </div>
         </div>
     </p-accordionTab>
 </p-accordion>
