--- a/src/app/components/entry-form/entry-form.component.html
+++ b/src/app/components/entry-form/entry-form.component.html
@@ -33,6 +33,11 @@
             </div>
         </div>
 
+        <div class="form-group">
+            <label for="activity">Comments</label>
+            <textarea [(ngModel)]="model.comments" type="text" class="form-control ng-valid" id="activity" name="activity" #activity="ngModel"></textarea>
+        </div>
+
         <button type="submit" class="btn btn-success" [disabled]="!entryForm.form.valid">Submit</button>
 
     </form>
