--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .mainpane {
-    padding: 100px 200px;
+    padding: 0 200p;;
     display: flex;
     flex-direction: row;
     justify-content: center;
