--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -1,18 +1,23 @@
-<p-accordion [multiple]="true">
-    <p-accordionTab [header]="person.firstName" *ngFor="let person of people">
-        <div class="person-details">
-            <div>
-                <label>Full Name:</label> {{person.firstName}} {{person.lastName}}
+<div class="page-header">
+    <h1>Activity List</h1>
+</div>
+<div class="container">
+    <p-accordion [multiple]="true">
+        <p-accordionTab [header]="person.firstName + ' ' + person.lastName" *ngFor="let person of people">
+            <div class="person-details">
+                <div>
+                    <label>Full Name:</label> {{person.firstName}} {{person.lastName}}
+                </div>
+                <div>
+                    <label>Email:</label> {{person.email}}
+                </div>
+                <div>
+                    <label>Activity:</label> {{person.activity}}
+                </div>
+                <div>
+                    <label>Comments:</label> {{person.comments}}
+                </div>
             </div>
-            <div>
-                <label>Email:</label> {{person.email}}
-            </div>
-            <div>
-                <label>Activity:</label> {{person.activity}}
-            </div>
-            <div>
-                <label>Comments:</label> {{person.comments}}
-            </div>
-        </div>
-    </p-accordionTab>
-</p-accordion>
+        </p-accordionTab>
+    </p-accordion>
+</div>
